--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="topbar">
-      <div class="logo">PWA<span>ChatGPT</span></div>
+      <div class="logo">DS<span>AI</span></div>
       <button id="clear" title="Clear chat">Clear</button>
     </header>
     <main id="chat"></main>
