--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>PWA ChatGPT</title>
+    <title>DS AI by Darence </title>
     <link rel="manifest" href="/manifest.webmanifest">
     <meta name="theme-color" content="#0a0a0a" />
     <link rel="apple-touch-icon" href="/icons/icon-192.png">
