--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main id="chat"></main>
     <footer class="composer">
-      <textarea id="input" rows="1" placeholder="Message ChatGPT..."></textarea>
+      <textarea id="input" rows="1" placeholder="Message DSAI..."></textarea>
       <button id="send" aria-label="Send">Send</button>
     </footer>
     <template id="bubble">
